--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Conferencias.cshtml" />
     <Content Include="Views\Home\Reservaciones.cshtml" />
+    <Content Include="Views\Home\Invitados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
